Fix wrong margin in Header while loading user

--- a/react/src/styles/guideline.module.scss
+++ b/react/src/styles/guideline.module.scss
@@ -97,7 +97,7 @@ header, footer {
                     margin: 0 34px;
                     flex-wrap: wrap;
 
-                    & > * {
+                    & > span {
                         display: block;
                         height: 32px;
                         display: flex;
@@ -126,7 +126,7 @@ header, footer {
                     font-size: 15px;
                     padding-bottom: 16px;
 
-                    & > * span {
+                    & > span > * > span {
                         display: initial !important;
                     }
 
@@ -135,21 +135,21 @@ header, footer {
                     }
                 }
 
-                & > * {
+                & > span {
                     &:not(:last-child) {
                         margin-right: 16px;
 
-                        span {
+                        > * > span {
                             display: none;
                         }
                     }
 
-                    i {
+                    > * > i {
                         width: 16px;
                         height: 16px;
                     }
 
-                    span {
+                    > * > span {
                         margin-left: 6px;
                     }
                 }
@@ -164,7 +164,7 @@ header, footer {
                     width: calc(100% - 34px);
                     margin-left: 34px;
 
-                    & > * {
+                    & > span {
                         display: block;
                         width: 100%;
                         height: 32px;
@@ -189,7 +189,7 @@ header, footer {
                     }
                 }
 
-                & > * {
+                & > span {
                     margin-right: 24px;
                 }
             }
@@ -202,7 +202,7 @@ header, footer {
                     }
                 }
 
-                & > * {
+                & > span {
                     margin-left: 24px;
                 }
             }
